@@ -135,8 +135,10 @@
       <Docs>
         <param name="raw">Pointer to the native list.</param>
         <param name="element_type">The type of the elements contained in the list.</param>
-        <param name="owned"><see langword="true" /> if the native list needs to be released on Dispose.</param>
-        <param name="elements_owned"><see langword="true" /> if the list elements need to be released on Dispose.</param>
+        <param name="owned">
+          <see langword="true" /> if the native list needs to be released on Dispose.</param>
+        <param name="elements_owned">
+          <see langword="true" /> if the list elements need to be released on Dispose.</param>
         <summary>Creates a List.</summary>
         <remarks>This type is only recommended for marshaling GList parameters and return values in bindings.</remarks>
       </Docs>
