@@ -76,8 +76,10 @@
       <Docs>
         <param name="raw">Pointer to the native list.</param>
         <param name="element_type">The type if the elements contained in the list.</param>
-        <param name="owned"><see langword="true" /> if the native list should be released on Dispose.</param>
-        <param name="elements_owned"><see langword="true" /> if the elements should be released on Dispose.</param>
+        <param name="owned">
+          <see langword="true" /> if the native list should be released on Dispose.</param>
+        <param name="elements_owned">
+          <see langword="true" /> if the elements should be released on Dispose.</param>
         <summary>Creates an SList.</summary>
         <remarks>This type should only be used for marshaling GSList parameters and return values in bindings.</remarks>
       </Docs>
