@@ -1,5 +1,5 @@
 <Type Name="FileChooserWidget" FullName="Gtk.FileChooserWidget">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public class FileChooserWidget : Gtk.VBox, Gtk.FileChooser, Gtk.FileChooserEmbed" />
+  <TypeSignature Language="C#" Maintainer="auto" Value="public class FileChooserWidget : Gtk.VBox, Gtk.FileChooser" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyPublicKey>[00 24 00 00 04 80 00 00 94 00 00 00 06 02 00 00 00 24 00 00 52 53 41 31 00 04 00 00 01 00 01 00 71 EB 6C 55 75 52 9C BF 72 44 F7 A6 EA 05 62 84 F9 EA E0 3B CF F2 CC 13 2C 9C 49 0A B3 09 EA B0 B5 6B CE 44 9D F5 03 D9 C0 A8 1E 52 05 85 CD BE 70 E2 FB 90 43 4B AC 04 FA 62 22 A8 00 98 B7 A1 A7 B3 AF 99 1A 41 23 24 BB 43 25 F6 B8 65 BB 64 EB F6 D1 C2 06 D5 73 2D DF BC 70 A7 38 9E E5 3E 0C 24 6E 32 79 74 1A D0 05 03 E4 98 42 E1 9B F3 7B 19 8B 40 21 26 CB 36 89 C2 EA 64 96 A4 7C B4]</AssemblyPublicKey>
@@ -18,9 +18,6 @@
   <Interfaces>
     <Interface>
       <InterfaceName>Gtk.FileChooser</InterfaceName>
-    </Interface>
-    <Interface>
-      <InterfaceName>Gtk.FileChooserEmbed</InterfaceName>
     </Interface>
   </Interfaces>
   <Members>
@@ -393,18 +390,7 @@
         <remarks>Override this method in a subclass to provide a default handler for the <see cref="M:Gtk.FileChooserWidget.CurrentFolderChanged" /> event.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="OnDefaultSizeChanged">
-      <MemberSignature Language="C#" Value="protected virtual void OnDefaultSizeChanged ();" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>Default handler for the <see cref="M:Gtk.FileChooserWidget.DefaultSizeChanged" /> event.</summary>
-        <remarks>Override this method in a subclass to provide a default handler for the <see cref="M:Gtk.FileChooserWidget.DefaultSizeChanged" /> event.</remarks>
-      </Docs>
-    </Member>
+    
     <Member MemberName=".ctor">
       <MemberSignature Language="C#" Value="protected FileChooserWidget (GLib.GType gtype);" />
       <MemberType>Constructor</MemberType>
@@ -927,24 +913,7 @@
         </Attribute>
       </Attributes>
     </Member>
-    <Member MemberName="DefaultSizeChanged">
-      <MemberSignature Language="C#" Value="public event EventHandler DefaultSizeChanged;" />
-      <MemberType>Event</MemberType>
-      <ReturnValue>
-        <ReturnType>System.EventHandler</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>Event fired when the size of the widget changes.</summary>
-        <remarks>
-        </remarks>
-      </Docs>
-      <Attributes>
-        <Attribute>
-          <AttributeName>GLib.Signal(CName="default-size-changed")</AttributeName>
-        </Attribute>
-      </Attributes>
-    </Member>
+    
     <Member MemberName="ShowHidden">
       <MemberSignature Language="C#" Value="public bool ShowHidden { set; get; };" />
       <MemberType>Property</MemberType>
