@@ -399,7 +399,6 @@
       <Type Name="CellLayout" />
       <Type Name="Editable" />
       <Type Name="FileChooser" />
-      <Type Name="FileChooserEmbed" />
       <Type Name="TreeDragDest" />
       <Type Name="TreeDragSource" />
       <Type Name="TreeModel" />
