@@ -243,6 +243,7 @@
   <attr path="/api/namespace/object[@cname='GtkExpander']/signal[@name='Activate']" name="name">Activated</attr>
   <attr path="/api/namespace/object[@cname='GtkFileChooserDialog']/constructor[@cname='gtk_file_chooser_dialog_new']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkFileChooserDialog']/constructor[@cname='gtk_file_chooser_dialog_new_with_backend']" name="hidden">1</attr>
+  <remove-node path="/api/namespace/object[@cname='GtkFileChooserWidget']/implements/interface[@cname='GtkFileChooserEmbed']" />
   <attr path="/api/namespace/object[@cname='GtkFileSelection']/field[@name='ActionArea']" name="type">GtkHButtonBox*</attr>
   <attr path="/api/namespace/object[@cname='GtkFileSelection']/field[@name='ActionArea']" name="new_flag">1</attr>
   <attr path="/api/namespace/object[@cname='GtkFileSelection']/field[@name='ButtonArea']" name="type">GtkHButtonBox*</attr>
