@@ -1551,42 +1551,6 @@
         </parameters>
       </method>
     </interface>
-    <interface name="FileChooserEmbed" cname="GtkFileChooserEmbed">
-      <signal name="DefaultSizeChanged" cname="default-size-changed" when="LAST">
-        <return-type type="void" />
-        <parameters>
-          <parameter type="GtkFileChooserEmbed*" name="chooser_embed" />
-        </parameters>
-      </signal>
-      <virtual_method name="GetDefaultSize" cname="get_default_size">
-        <return-type type="void" />
-        <parameters>
-          <parameter type="GtkFileChooserEmbed*" name="chooser_embed" />
-          <parameter type="gint*" name="default_width" />
-          <parameter type="gint*" name="default_height" />
-        </parameters>
-      </virtual_method>
-      <virtual_method name="GetResizableHints" cname="get_resizable_hints">
-        <return-type type="void" />
-        <parameters>
-          <parameter type="GtkFileChooserEmbed*" name="chooser_embed" />
-          <parameter type="gboolean*" name="resize_horizontally" />
-          <parameter type="gboolean*" name="resize_vertically" />
-        </parameters>
-      </virtual_method>
-      <virtual_method name="ShouldRespond" cname="should_respond">
-        <return-type type="gboolean" />
-        <parameters>
-          <parameter type="GtkFileChooserEmbed*" name="chooser_embed" />
-        </parameters>
-      </virtual_method>
-      <virtual_method name="InitialFocus" cname="initial_focus">
-        <return-type type="void" />
-        <parameters>
-          <parameter type="GtkFileChooserEmbed*" name="chooser_embed" />
-        </parameters>
-      </virtual_method>
-    </interface>
     <interface name="TreeDragDest" cname="GtkTreeDragDest">
       <virtual_method name="DragDataReceived" cname="drag_data_received">
         <return-type type="gboolean" />
