@@ -44,6 +44,8 @@
           <!-- Internal stuff -->
           <exclude>gtkfilechooserdefault.c</exclude>
           <exclude>gtkfilechooserdefault.h</exclude>
+          <exclude>gtkfilechooserembed.c</exclude>
+          <exclude>gtkfilechooserembed.h</exclude>
           <exclude>gtkfilechooserentry.c</exclude>
           <exclude>gtkfilechooserentry.h</exclude>
           <exclude>gtkfilechooserutils.c</exclude>
