@@ -1,3 +1,9 @@
+2005-06-24  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/Gtk.metadata : remove the one reference to FileChooserEmbed.
+	* gtk/gtk-api-2.*.raw : regen.
+	* sources/gtk-sharp-2.*-sources.xml : exclude FileChooserEmbed files.
+
 2005-06-23  Mike Kestner  <mkestner@novell.com>
 
 	* generator/ReturnValue.cs : support owned and elements_owned for lists.
